--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "AS3 library for Newgrounds.io API",
   "scripts": {
-    "build": "npx ngio-build ./src/modelgen/config.js && node scripts/create-ngio-zip.js"
+    "build": "npx ngio-build ./src/modelgen/config.js"
   },
   "dependencies": {
     "@psychogoldfish/ngio-object-model-generator": "github:PsychoGoldfishNG/ngio-object-model-generator",
